Fixed spacing and padding in inright and inleft to accomodate longer samplenames

--- a/lifegrid/lifegrid.css
+++ b/lifegrid/lifegrid.css
@@ -128,24 +128,17 @@
 .statsdata td.inleft {
   text-align:left;
   cursor:help;
-  /*width:80%;*/
-  width:70%;
-  padding-left:25px;
-  border:0;
+  width:60%;
+  padding-left:15px;
+  border:1;
 }
 
 .statsdata td.inright {
-  /*width:20%;*/
-  width:30%;
+  width:40%;
   text-align:right;
-  padding-right:25px;
-  border:0;
+  padding-right:15px;
+  border:1;
 }
-
-/*.slick-header-columns {*/
-  /*background: white;*/
-  /*border-bottom: 1px solid silver;*/
-/*}*/
 
 .slick-header-columns {
   background: white;
